# crewai-workflow

./: .gitignore  Dockerfile  GUIDE.md  PROJECT_SUMMARY.md  README.md  main.py  prep.py  pyproject.toml  test_litellm.py  test_sse.html
.github/workflows/: deploy.yml
config/: settings.py
crew/: agents.py  crew.py  tasks.py
models/: schemas.py
routers/: workflow.py
src/: __init__.py
src/api_clients/: __init__.py  alphavantage.py
src/database/: __init__.py  connection.py  crud.py  models.py
src/models/: schemas.py
src/processors/: __init__.py  data_processor.py
src/server/: __init__.py  app.py
