[tool.poetry]
name = "crewai-demo"
version = "0.1.0"
description = ""
authors = ["Hassaan Ali <hassaanali723@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = ">=0.136.1,<0.137.0"
uvicorn = {extras = ["standard"], version = ">=0.46.0,<0.47.0"}
python-dotenv = ">=1.2.2,<2.0.0"
crewai = {extras = ["azure-ai-inference"], version = ">=1.14.4,<2.0.0"}
azure-keyvault-secrets = ">=4.11.0,<5.0.0"
azure-identity = ">=1.25.3,<2.0.0"
pysqlite3-binary = {markers = "sys_platform == \"linux\"", version = "^0.5.4.post2"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
